--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+<span
+  data-title="<%= @article.title %>"
+  data-body="<%= @article.body %>">
+</span>
 
-<p>
-  <strong>Body:</strong>
-  <%= @article.body %>
-</p>
+<div id="article-show"></div>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
+
+<%= javascript_pack_tag 'articles_show' %>
